# agent-prototype-1

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  test_mcp_call.sh
examples/: basic_usage.py  config_usage.py  conversation_memory.py  custom_llm_provider.py  fetch_application_by_id.py  instana_integration.py  interactive_chat.py  summarize_application.py  vllm_usage.py  watsonx_usage.py
src/slo_agent/: __init__.py  agent.py  config.py  llm_providers.py  mcp_client.py  tools.py
tests/: __init__.py  test_agent.py
